--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,6 +19,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            animation: gradient 5s ease infinite;
         }
 
         .container {
@@ -28,6 +29,7 @@
             text-align: center;
             width: 100%;
             max-width: 400px;
+            margin: 0 15px;
         }
 
         h1 {
@@ -93,15 +95,31 @@
             }
         }
 
-        body {
-            animation: gradient 5s ease infinite;
+        /* Responsive design for smartphones */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            .input-field {
+                font-size: 1rem;
+                padding: 12px;
+            }
+
+            button {
+                font-size: 1rem;
+                padding: 12px;
+            }
+
+            .footer {
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>नववर्ष 2025 की शुभकामनाएँ!</h1>
-      
         <input type="text" id="nameInput" class="input-field" placeholder="Your Good Name" />
         <button onclick="login()">Login</button>
         <div class="footer">
